--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mpastore",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "gtfs": "^0.5.0"
   }
 }
